# operation-anthill

./: .dockerignore  .gitignore  10.0.0.85  Anthill.sln  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  Dockerfile  LICENSE  README.md  anthill kernel harness v0.2.1  anthill kernel harness v0.3  anthill kernel harness v0.6.1  anthill kernel harness v0.7.2  anthill kernel harness v0.9.1  anthill kernel harness v0.9.2  anthill kernel harness v0.py  anthill kernel harness v1.py  build.ps1  build.sh  config.example.json  docker-compose.yml  kernel harness v0.4.1  kernel harness v0.5.2  kernel harness v0.8.1  kernel harness v1.1.1  kernel harness v1.2  kernel harness v1.2.3  kernel harness v1.4  kernel harness v1.4.1  kernel harness v1.4.2
.githooks/: pre-push
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
deploy/: anthill-banner.txt
docs/: ANTHILL_AUTOAPPLY_PROOF.md  APPROVALS.md  AUTOAPPLY_TEST.md  AUTONOMY.md  AUTO_APPLY_TEST.md  CONSOLE_REDESIGN.md  CONSOLE_REFIT.md  DEPLOYMENT.md  HOMELAB.md  LLAMA3_1_Model_Performance_Report.md  NORTH_STAR.md  ROADMAP.md  TRAINING_MISSIONS.md  UI_ROADMAP.md  model_comparison.md
native/anthill_kernel/: CMakeLists.txt  anthill_kernel.cpp  anthill_kernel.h
py/: kernel harness v0.1  kernel harness v0.7.1  kernel harness v1.3  kernel harness v1.3.1  kernel harness v1.5.1  kernel harness v1.6.1  kernel harness v1.6.2
py.old/: kernel harness v1.0  kernel harness v1.3.2  kernel harness v1.5  kernel harness v1.6
scripts/: gh-setup.sh  release.sh  validate.ps1  validate.sh
(+185 files in other folders)
